# amplifier_cli_agent_orchestrator_v1

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
amplifier-amplifier-claude/: README.md
examples/plugins/cao-discord/cao_discord/: plugin.py
examples/plugins/cao-discord/tests/: test_plugin.py
scripts/: bump_version.py
src/cli_agent_orchestrator/api/: main.py
src/cli_agent_orchestrator/cli/commands/: env.py  flow.py  info.py  init.py  install.py  launch.py  shutdown.py  skills.py
src/cli_agent_orchestrator/clients/: database.py  tmux.py
src/cli_agent_orchestrator/mcp_server/: models.py  server.py  utils.py
src/cli_agent_orchestrator/models/: agent_profile.py  flow.py  inbox.py  kiro_agent.py  q_agent.py  session.py  skill.py  terminal.py
src/cli_agent_orchestrator/plugins/: __init__.py  base.py  events.py  registry.py
src/cli_agent_orchestrator/providers/: base.py  claude_code.py  codex.py  copilot_cli.py  gemini_cli.py  kimi_cli.py  kiro_cli.py  manager.py  q_cli.py
src/cli_agent_orchestrator/services/: cleanup_service.py  flow_service.py  inbox_service.py  plugin_dispatch.py  session_service.py  settings_service.py  terminal_service.py
src/cli_agent_orchestrator/utils/: agent_profiles.py  env.py  skill_injection.py  skills.py  template.py  terminal.py  tool_mapping.py
src/cli_agent_orchestrator/web_ui/: index.html
src/cli_agent_orchestrator/web_ui/assets/: index-BXMLhBau.css  index-BpPHwanT.js
test/: test_constants.py
test/api/: test_api_coverage.py  test_api_endpoints.py  test_flow_api.py  test_inbox_messages.py  test_plugin_lifespan.py  test_security.py  test_settings_api.py  test_terminals.py
test/cli/commands/: test_flow.py  test_info.py  test_init.py  test_install.py  test_launch.py  test_skills.py
test/clients/: test_database.py  test_tmux_client.py  test_tmux_send_keys.py
test/e2e/: conftest.py  test_allowed_tools.py  test_assign.py  test_cross_provider.py  test_handoff.py  test_send_message.py  test_skills.py  test_supervisor_orchestration.py
test/mcp_server/: test_assign.py  test_handoff.py  test_load_skill.py  test_resolve_child_allowed_tools.py  test_utils.py
test/models/: test_session.py
test/plugins/: test_base.py  test_events.py  test_package.py  test_registry.py
test/providers/: test_base_provider.py  test_claude_code_coverage.py  test_claude_code_unit.py  test_codex_provider_unit.py  test_copilot_cli_unit.py  test_gemini_cli_unit.py  test_kimi_cli_unit.py  test_kiro_cli_integration.py  test_kiro_cli_unit.py  test_permission_prompt_detection.py  test_provider_manager_unit.py  test_q_cli_integration.py  test_q_cli_unit.py  test_tmux_working_directory.py
test/providers/fixtures/: generate_fixtures.py
test/services/: test_cleanup_service.py  test_flow_service.py  test_inbox_service.py  test_plugin_dispatch.py  test_plugin_event_emission.py  test_session_service.py  test_settings_service.py  test_terminal_service.py  test_terminal_service_coverage.py  test_terminal_service_full.py
test/utils/: test_agent_profiles.py  test_agent_profiles_coverage.py  test_logging.py  test_skill_injection.py  test_skills.py  test_terminal.py  test_tool_mapping.py
